--- a/abakkus_react/src/peopleConfig.json
+++ b/abakkus_react/src/peopleConfig.json
@@ -1,6 +1,31 @@
 [
     {
         "name": "Sunil Singhania",
+        "position": "",
+        "description": "",
+        "twitter": "",
+        "linkedin": "",
+        "img_name": ""
+    },
+    {
+        "name": "Sunil Singhania",
+        "position": "",
+        "description": "",
+        "twitter": "",
+        "linkedin": "",
+        "img_name": ""
+    },
+    {
+        "name": "Sunil Singhania",
+        "position": "",
+        "description": "",
+        "twitter": "",
+        "linkedin": "",
+        "img_name": ""
+    },
+    {
+        "name": "Sunil Singhania",
+        "position": "",
         "description": "",
         "twitter": "",
         "linkedin": "",
