--- a/abakkus_react/package.json
+++ b/abakkus_react/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^7.2.1",
     "bulma": "^0.9.0",
     "file-loader": "^6.1.0",
+    "glob": "^7.1.6",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-bulma-components": "^3.4.0",
