--- a/src/config/peopleConfig.json
+++ b/src/config/peopleConfig.json
@@ -21,7 +21,7 @@
         "description": "Aman has over 17 years of Indian equity experience. Prior to joining Abakkus he was Portfolio manager for all local and offshore schemes for PMS division of Reliance Asset Management. Having worked at Singapore office of Reliance, Aman brings along a regional and global perspective in investing and has strong track record across – benchmark, absolute long and long-short strategies. Before joining Reliance in 2005 he was associated as research analyst with TAIB securities, Tata TD waterhouse and other brokerage firms. Aman holds an MBA degree from Mumbai University.",
         "twitter": "",
         "linkedin": "https://www.linkedin.com/in/aman-chowhan-90a53429/",
-        "img_url": "imgs/people/sunil.jpg"
+        "img_url": "imgs/people/aman.jpg"
     },
     {
         "name": "Archan Thakore",
@@ -29,7 +29,7 @@
         "description": "Archan Thakore has overall experience of around 8 years. Prior to joining Abakkus, he has worked with Reliance Nippon Life Asset Management and Mirae Asset Mutual Fund in Product Management for PMS, AIF and Mutual Fund products. He also has experience in Equity Research, Quantitative Analysis and Information Technology working with companies such as Barclays, Morgan Stanley and Metasys Software. He is a Computer Engineer from Mumbai University and is a candidate for Level 3 of CFA Examination.",
         "twitter": "https://twitter.com/archanthakore",
         "linkedin": "https://www.linkedin.com/in/archan-thakore-6816051a/",
-        "img_url": "./imgs/people/sunil.jpg"
+        "img_url": "./imgs/people/archan.jpg"
     },
     {
         "name": "Chetan Vora",
@@ -56,11 +56,11 @@
         "img_url": "imgs/people/sunil.jpg"
     },
     {
-        "name": "Rhutu Mantri",
-        "position": "Research Associate",
-        "description": "Rhutu Mantri is a Research Associate with over 2 years of experience in the Equity Market. Rhutu has done her Bachelors of Business Administration from Kingston University, London and her Post Graduate from S.P. Jain Institute of Management and Research, Mumbai. Rhutu has previously worked with Prabhudas Lilladher Pvt. Ltd. in the portfolio management services division where she was responsible for all aspects of the research process and financial modelling with a focus on companies in the small and mid size space.",
-        "twitter": "https://twitter.com/rhutumantri",
-        "linkedin": "https://www.linkedin.com/in/rhutu-mantri-03080332/",
+        "name": "Nikhil Gada",
+        "position": "Research Analyst",
+        "description": "Nikhil Gada has over 8 years of equity research experience tracking companies across multiple sectors like Building Materials, Light Electricals, Consumer Durables, Chemicals and Branded Apparels/Retail in the mid & small cap universe. Prior to joining Abakkus, he was working as a Senior Research Analyst with Asian Markets Securities (AMSEC) for around 3 years. He has also worked with CLSA India Pvt Ltd., Morgan Stanley & ZyFin Research Pvt. Ltd. Nikhil has done his engineering from Vidyavardhini’s College of Engineering & Technology and PGDBM from N.L Dalmia Institute of Management Studies & Research. Nikhil has also successfully completed the CFA International (USA) Program in 2013.",
+        "twitter": "https://twitter.com/nick2587",
+        "linkedin": "https://www.linkedin.com/in/nikhil-gada-cfa-96268b34/",
         "img_url": "imgs/people/sunil.jpg"
     },
     {
@@ -74,7 +74,7 @@
     {
         "name": "Foram Bauva",
         "position": "Research Associate",
-        "description": "Foram Bauva is currently working as a Research Associate. Her responsibilities include gathering data from primary and secondary sources of information, organizing and analysing this material, and preparing research reports. Foram graduated from N.M College and completed her Chartered Accountancy from the ICAI, Mumbai in 2017. Prior to this role, she has worked at K.N Gandhi & Co as a Statutory Auditor for almost 4 years in the Construction Industry having handled major clients such as Raheja Group of Companies, Lokhandwala Constructions, Gundecha group and various others. Going forward, she desires to specialise in the field of Investment Management through continuous focus, devotion and self-learning.",
+        "description": "Foram Bauva has more than two years of experience in the field of equity investments. At Abakkus, she is responsible for research on companies predominantly in the small and mid cap space. Prior to joining Abakkus, she has worked at K.N Gandhi as an Audit Associate and has an experience of four years in the construction sector having handled clients like Raheja, Lokhandwala, Gundecha and various others. Foram is a Chartered Accountant by profession and has graduated from NM College. She also holds research analyst and investment advisor certificates from NISM.",
         "twitter": "https://twitter.com/Foram64760643",
         "linkedin": "https://www.linkedin.com/in/foram-bauva-ca-9b6584128/",
         "img_url": "imgs/people/sunil.jpg"
