--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bulma": "^0.9.0",
     "file-loader": "^6.1.0",
     "glob": "^7.1.6",
+    "list-react-files": "^0.2.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-bulma-components": "^3.4.0",
