--- a/src/config/peopleConfig.json
+++ b/src/config/peopleConfig.json
@@ -2,10 +2,10 @@
     {
         "name": "Sunil Singhania",
         "position": "Founder",
-        "description": "Sunil Singhania, CFA, is the Founder of Abakkus Asset Management, LLP, an India-focused Asset Management Company he established in 2018. Prior to this, in his role as Global Head – Equities at Reliance Capital Ltd., he oversaw equity assets and provided strategic inputs across Reliance Capital Group of companies including asset management, insurance, AIF and offshore assets. And as CIO – Equities, Singhania led Reliance Mutual Fund equity schemes to be rated amongst the best. Reliance Growth Fund grew over 100 times in less than 22 years under Singhania’s leadership. Furthermore, he led Reliance Nippon Life Asset Management Ltd.’s international efforts and was instrumental in launching India funds in Japan, South Korea, and the UK, besides managing mandates from institutional investors based in the US, Singapore, and other countries. Singhania was the Promoter of The Association of NSE Members of India; a body of stock brokers. He is also the first individual from India to be elected as a member of the CFA Institute Board of Governors and currently serves as the Chair of the Investment Committee and as a member of the Nominating Committee. He also sat on CFA Institute’s Standards of Practice Council for six years, and was the Founder of the Indian Association of Investment Professionals (now CFA Society India) and served as its President for eight years. Singhania graduated in commerce from the Bombay University and completed his Chartered Accountancy from the ICAI, Delhi with an all India rank. He has also earned the right to use the Chartered Financial Analyst designation, conferred by CFA Institute. Having travelled extensively across the world, Singhania has also attended many global investment conferences and seminars.",
+        "description": "Sunil Singhania, CFA, is the Founder of Abakkus Asset Management, LLP, an India-focused Asset Management Company established in 2018. Prior to this, in his role as Global Head – Equities at Reliance Capital Ltd., he oversaw equity assets and provided strategic inputs across Reliance Capital Group of companies including asset management, insurance, AIF and offshore assets. And as CIO – Equities, Singhania led Reliance Mutual Fund equity schemes. Reliance Growth Fund grew over 100 times in less than 22 years under Singhania’s leadership. Furthermore, he led Reliance Nippon Life Asset Management Ltd.’s international efforts and was instrumental in launching India funds in Japan, South Korea, and the UK, besides managing mandates from institutional investors based in the US, Singapore, and other countries. He is currently appointed on the IFRS Capital Market Advisory Committee. (2020-2023). He was the Promoter of The Association of NSE Members of India; a body of stock brokers. He was also the first individual from India to be elected as a member of the CFA Institute Board of Governors and currently serves as the Chair of the Investment Committee and as a member of the Nominating Committee. He also sat on CFA Institute’s Standards of Practice Council for six years, and was the Founder of the Indian Association of Investment Professionals (now CFA Society India) and served as its President for eight years. He is a CA rankholder and a CFA charterholder and graduated in commerce from the Mumbai University.",
         "twitter": "https://twitter.com/SunilBSinghania",
         "linkedin": "https://www.linkedin.com/in/sunilsinghania/",
-        "img_url": "https://raw.githubusercontent.com/ujjusinghania/Abakkus-Website/react-js/abakkus_react/src/imgs/people/sunil.jpg?token=ABA4QQLCYKCVL25AN2OLAJK7LWZ3W"
+        "img_url": "https://www.dropbox.com/s/yfdawttzceshv6p/sunil.jpg?raw=1"
     },
     {
         "name": "Biharilal Deora",
@@ -13,7 +13,7 @@
         "description": "Biharilal Deora, FCA, CFA, CIPM is an accomplished finance professional with a global market perspective. Prior to joining Abakkus, he was managing corporate, family office and university clients, bringing an investment expertise that spans all asset classes. He is also a subject matter expert across a range of tax, accounting, pension, risk management, and capital market policies. Mr. Deora is a regular visiting faculty member for advanced finance programs and is currently pursuing a PhD with Symbiosis University.  He began his career as a financial analyst - at Credit Suisse and Fidelity Investments amongst others - where he gained knowledge across a range of sectors, including oil and gas and commodities in the US, Europe and Asia and holds a masters in Commerce degree from Veer Narmad South Gujarat University, amongst being a Rankholder chartered accountant, Certified Financial planner, CFA Charterholders and and other certificates.",
         "twitter": "https://twitter.com/b_deora",
         "linkedin": "https://www.linkedin.com/in/deora/",
-        "img_url": "https://raw.githubusercontent.com/ujjusinghania/Abakkus-Website/react-js/abakkus_react/src/imgs/people/BD.jpg?token=ABA4QQJDYY64SVFPBERPD3S7LWZUQ"
+        "img_url": "https://www.dropbox.com/s/i6yssvebqfeuaad/BD.jpg?raw=1"
     },
     {
         "name": "Aman Chowhan",
@@ -21,7 +21,7 @@
         "description": "Aman has over 17 years of Indian equity experience. Prior to joining Abakkus he was Portfolio manager for all local and offshore schemes for PMS division of Reliance Asset Management. Having worked at Singapore office of Reliance, Aman brings along a regional and global perspective in investing and has strong track record across – benchmark, absolute long and long-short strategies. Before joining Reliance in 2005 he was associated as research analyst with TAIB securities, Tata TD waterhouse and other brokerage firms. Aman holds an MBA degree from Mumbai University.",
         "twitter": "",
         "linkedin": "https://www.linkedin.com/in/aman-chowhan-90a53429/",
-        "img_url": "imgs/people/sunil.jpg"
+        "img_url": "https://www.dropbox.com/s/66f3lvzydcgbiep/aman.jpg?raw=1"
     },
     {
         "name": "Archan Thakore",
@@ -29,7 +29,7 @@
         "description": "Archan Thakore has overall experience of around 8 years. Prior to joining Abakkus, he has worked with Reliance Nippon Life Asset Management and Mirae Asset Mutual Fund in Product Management for PMS, AIF and Mutual Fund products. He also has experience in Equity Research, Quantitative Analysis and Information Technology working with companies such as Barclays, Morgan Stanley and Metasys Software. He is a Computer Engineer from Mumbai University and is a candidate for Level 3 of CFA Examination.",
         "twitter": "https://twitter.com/archanthakore",
         "linkedin": "https://www.linkedin.com/in/archan-thakore-6816051a/",
-        "img_url": "./imgs/people/sunil.jpg"
+        "img_url": "https://www.dropbox.com/s/3c2yb7t9f0w95a5/archan.jpg?raw=1"
     },
     {
         "name": "Chetan Vora",
@@ -37,7 +37,7 @@
         "description": "Chetan Vora has over 10 years of experience in Indian Equity Research and total of 15 years of professional experience. Prior to joining Abakkus, he was working as a senior research analyst with ValueQuest Investment Advisors (Research arm for the PMS and Family Office) for closed to 5 years wherein he covered comprehensively mid-cap and small cap companies. He was also associated Edelweiss Securities (Institutional Research) wherein he used to track Auto and Auto Ancillary sector. During the earlier years of his career he has also worked with Price Waterhouse in the Financial Services Assurance Vertical. With his analytical abilities, process driven approach he brings fresh perspective and insights to the research work. Chetan is Chartered Accountant by profession and completed his graduation from University of Mumbai.",
         "twitter": "https://twitter.com/chetanvora_25",
         "linkedin": "https://www.linkedin.com/in/chetan-vora-8a213719",
-        "img_url": "imgs/people/sunil.jpg"
+        "img_url": "https://www.dropbox.com/s/f1xe10fby21bvxs/chetan.jpg?raw=1"
     },
     {
         "name": "Rahul Veera",
@@ -45,7 +45,7 @@
         "description": "Rahul Veera is an Investment analyst with over 8 years of equity research experience. Rahul has spent the majority of his early career in investment selection of smallcap and midcap companies with strong focus on bottom-up research. He believes that patience, independent thinking, and a long-term outlook are essential to achieving good returns. Before joining Abakkus asset management, Rahul served as an equity research analyst for organizations like Morgan Stanley, Edelweiss and Elara capital. Rahul attended IIM Calcutta with concentrations in Finance.",
         "twitter": "https://twitter.com/RahulVeera6/",
         "linkedin": "https://www.linkedin.com/in/rahul-veera-61788359/",
-        "img_url": "imgs/people/sunil.jpg"
+        "img_url": "https://www.dropbox.com/s/aaqw8k6jqv2tpiv/rahul.jpg?raw=1"
     },
     {
         "name": "Akshay Shah",
@@ -53,15 +53,15 @@
         "description": "Akshay has around a decade of experience in investment industry including Equity Dealing, Trading, Risk Management, Surveillance and Trade Settlement as well as financial modelling. At Abakkus, he is responsible for Equity Dealing. Prior to this he has worked with Elara Capital and First Global Securities and Indiabulls Securities. Akshay is an MBA in Finance and has cleared level 1 of CFA Examination. He has done his Bachelors in Commerce from University of Mumbai.",
         "twitter": "",
         "linkedin": "",
-        "img_url": "imgs/people/sunil.jpg"
+        "img_url": "https://www.dropbox.com/s/m161shdvmodwenl/akshay.jpg?raw=1"
     },
     {
-        "name": "Rhutu Mantri",
-        "position": "Research Associate",
-        "description": "Rhutu Mantri is a Research Associate with over 2 years of experience in the Equity Market. Rhutu has done her Bachelors of Business Administration from Kingston University, London and her Post Graduate from S.P. Jain Institute of Management and Research, Mumbai. Rhutu has previously worked with Prabhudas Lilladher Pvt. Ltd. in the portfolio management services division where she was responsible for all aspects of the research process and financial modelling with a focus on companies in the small and mid size space.",
-        "twitter": "https://twitter.com/rhutumantri",
-        "linkedin": "https://www.linkedin.com/in/rhutu-mantri-03080332/",
-        "img_url": "imgs/people/sunil.jpg"
+        "name": "Nikhil Gada",
+        "position": "Research Analyst",
+        "description": "Nikhil Gada has over 8 years of equity research experience tracking companies across multiple sectors like Building Materials, Light Electricals, Consumer Durables, Chemicals and Branded Apparels/Retail in the mid & small cap universe. Prior to joining Abakkus, he was working as a Senior Research Analyst with Asian Markets Securities (AMSEC) for around 3 years. He has also worked with CLSA India Pvt Ltd., Morgan Stanley & ZyFin Research Pvt. Ltd. Nikhil has done his engineering from Vidyavardhini’s College of Engineering & Technology and PGDBM from N.L Dalmia Institute of Management Studies & Research. Nikhil has also successfully completed the CFA International (USA) Program in 2013.",
+        "twitter": "https://twitter.com/nick2587",
+        "linkedin": "https://www.linkedin.com/in/nikhil-gada-cfa-96268b34/",
+        "img_url": "https://www.dropbox.com/s/jc7bzcs16qv2p6k/Nikhil%20Gada.jpg?raw=1"
     },
     {
         "name": "Kislay Upadhyay",
@@ -69,15 +69,15 @@
         "description": "Kislay Upadhyay is a Research Associate with over 3 years of experience in Equity Investments. Prior to joining Abakkus, Kislay worked with Ambit Asset Management where he co-managed a long-only PMS in a 2-member team, working directly with the Fund Manager. He specifically looked into BFSI investments in mid and large size space. He also worked extensively on Indian Equity Strategy, and was responsible for most of the research work in bestseller book 'Coffee Can Investing'. He has also worked with Muthoot Finance and Synergy Consulting as Investment Analyst. Kislay has done his engineering from Visvesvaraya Technological University and PGDM from Indian Institute of Management Lucknow (Finance).",
         "twitter": "https://twitter.com/KislayU",
         "linkedin": "https://www.linkedin.com/in/kislay-upadhyay-05b97751",
-        "img_url": "imgs/people/sunil.jpg"
+        "img_url": "https://www.dropbox.com/s/pnum11p0hf2fsqx/kislay.jpg?raw=1"
     },
     {
         "name": "Foram Bauva",
         "position": "Research Associate",
-        "description": "Foram Bauva is currently working as a Research Associate. Her responsibilities include gathering data from primary and secondary sources of information, organizing and analysing this material, and preparing research reports. Foram graduated from N.M College and completed her Chartered Accountancy from the ICAI, Mumbai in 2017. Prior to this role, she has worked at K.N Gandhi & Co as a Statutory Auditor for almost 4 years in the Construction Industry having handled major clients such as Raheja Group of Companies, Lokhandwala Constructions, Gundecha group and various others. Going forward, she desires to specialise in the field of Investment Management through continuous focus, devotion and self-learning.",
+        "description": "Foram Bauva has more than two years of experience in the field of equity investments. At Abakkus, she is responsible for research on companies predominantly in the small and mid cap space. Prior to joining Abakkus, she has worked at K.N Gandhi as an Audit Associate and has an experience of four years in the construction sector having handled clients like Raheja, Lokhandwala, Gundecha and various others. Foram is a Chartered Accountant by profession and has graduated from NM College. She also holds research analyst and investment advisor certificates from NISM.",
         "twitter": "https://twitter.com/Foram64760643",
         "linkedin": "https://www.linkedin.com/in/foram-bauva-ca-9b6584128/",
-        "img_url": "imgs/people/sunil.jpg"
+        "img_url": "https://www.dropbox.com/s/pukw7rlmpaz3stt/foram.jpg?raw=1"
     },
     {
         "name": "Rajyavardhan Sonthalia",
@@ -85,7 +85,7 @@
         "description": "Before joining Abakkus, Rajya was researching the micro and mid cap space at Crest Capital. Prior to this, he has trained at Enam Holdings, Axis Capital and HDFC AMC. He has worked in sectors like cement, steel, aviation and BFS. He finished his Bachelors of Science at Babson College after which he completed a certification in Corporate Finance from Harvard.",
         "twitter": "",
         "linkedin": "https://www.linkedin.com/in/rajyavardhan-sonthalia-598019169/",
-        "img_url": "imgs/people/sunil.jpg"
+        "img_url": "https://www.dropbox.com/s/zlqx8rp9u5cbk2h/raj.jpg?raw=1"
     },
     {
         "name": "Amruta Kurane",
@@ -93,6 +93,6 @@
         "description": "Amruta Kurane is currently working as an Admin and Office manager. Her role is to create and maintain a pleasant work environment while ensuring high level of organizational effectiveness, communication and safety. Amruta graduated from Mumbai University and has done her diploma in computer hardware, software and networking. In addition to this, she has also completed her diploma in Aviation. Amruta previously worked with Konark Advisers as an office manager where she was responsible for ensuring efficient functioning of a office by conducting a range of administrative, financial and managerial tasks. She forms a delicate balance of being friendly and approachable and being able to make quick decisions to keep the office functioning smoothly.",
         "twitter": "https://twitter.com/Angelamu20",
         "linkedin": "https://www.linkedin.com/in/amruta-kurane-a7849954/",
-        "img_url": "imgs/people/sunil.jpg"
+        "img_url": "https://www.dropbox.com/s/y3plkxa3272lh19/amruta.jpg?raw=1"
     }
 ]
