--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-icons": "^3.11.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-tiny-fab": "^4.0.2",
     "react-useanimations": "^2.0.5"
   },
   "scripts": {
