--- a/src/config/navbarBlogConfig.json
+++ b/src/config/navbarBlogConfig.json
@@ -4,8 +4,8 @@
         "urlLink": "https://blog.abakkusinvest.com/"
     },
     {
-        "navbarText": "What We Are Reading",
-        "urlLink": "https://blog.abakkusinvest.com/category/wwar-library/"
+        "navbarText": "What We Are Seeing",
+        "urlLink": "https://blog.abakkusinvest.com/category/wwas-library/"
     },
     {
         "navbarText": "Market Outlook",
